--- a/EjercicioCiclismo/FrontEnd/siteWeb/Views/Index.html
+++ b/EjercicioCiclismo/FrontEnd/siteWeb/Views/Index.html
@@ -6,10 +6,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
-<body>
+<body style="margin-left: 50px;margin-top: 20px;margin-right: 1px;">
+    <h1>Alejandro Ortiz </h1>
+
+    <div class="row">
+        <div class="col-md-3 form-horizontal">
+            <form action="../Controllers/Home/Index" method="post">
+                <br />
+                <input type="text" class="form-control" name="usr" placeholder="Usuario" required autofocus>
+                <br />
+                <input type="password" class="form-control" name="pwd" placeholder="Contraseña" required>
+                <br />
+                <button class="btn btn-primary" type="submit">
+                    Iniciar sesión
+                </button>
+                <label class="checkbox pull-right">
+                    <input type="checkbox" name="rme">
+                    <label>Recordarme</label>
+                </label>
+            </form>
+        </div>
+    </div>
 
 </body>
+<footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</footer>
 
 </html>
